# naoblocks.net

./: .gitignore  .gitmodules  LICENSE  NaoBlocks.sln  README.md  deployClient.cmd  generateClient.cmd  generateCoverage.cmd  generateCoverageReport.cmd  readme.md
Clients/: readme.md
Data/: angular-ui.json  mbot2-definition.json  mbot2-toolbox.xml  nao-definition.json  nao-toolbox.xml  tangibles-ui.json  tello-toolbox.xml  unified-all.json  unified-ballet.json  unified-mbot.json  unified-ui.json
Documentation/: Commands.md  Data.md  Development.md  NewCommands.md  ProjectLayout.md  Protocols.md  Publications.md  Robots.md  Running.md  RunningADemo.md  SocketProtocol.md  Topography1.md  UserInterfaces.md  WebSocketProtocol.md  mbot.md
Manual/: Steps to Setup a NaoBlocks.docx
NaoBlocks.Client/: CompiledCodeProgram.cs  Connection.cs  NaoBlocks.Client.csproj
NaoBlocks.Client.Console/: NaoBlocks.Client.Console.csproj  Program.cs
NaoBlocks.Common/: AstNode.cs  AstNodeType.cs  ClientMessage.cs  ClientMessageType.cs  CommandError.cs  ExecutionResult.cs  ListResult.cs  Token.cs  TokenSession.cs  TokenType.cs  VersionInformation.cs
NaoBlocks.Core/: NaoBlocks.Core.csproj
NaoBlocks.Core.Tests/: NaoBlocks.Core.Tests.csproj
NaoBlocks.Parser.Tests/: AstNodeTests.cs  CodeParserTests.cs  CodeScannerTests.cs  NaoBlocks.Parser.Tests.csproj  ParserTests.cs  (+3 more)
robot/ROS/: CMakeLists.txt
robot/ROS/launch/: basic.launch  client_only.launch  full.launch
robot/ROS/src/: block_client.py  communications.py  engine.py  logger.py  noRobot.py  robot.py  wheel_controller.py
(+1463 files in other folders)
